# cpp-futures-promises

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  buildboost.sh  buildboost_release.sh  buildcoverage.sh  buildfolly.sh  buildrelease.sh  buildtravisci.sh  choice_combinators.h  configureboost.sh  configurefolly.sh  configurefolly_release.sh  configurewangle.sh  configurewangle_release.sh  cppcheck.sh  format.sh  install_fedora_dependencies.sh  valgrind_suppress.txt
src/: CMakeLists.txt  advanced_futures_boost.h  advanced_futures_folly.h  advanced_futures_lock.h  advanced_futures_promises.h  callback_boost.cpp  callback_folly.cpp  choice_combinators.h  choices.cpp  combinators_boost.cpp  combinators_folly.cpp  core.h  core_impl.h  currency.cpp  currency.h  currency_boost.cpp  currency_cpp17.cpp  currency_cpp17_sequential.cpp  currency_folly.cpp  currency_folly_or_else.cpp  currency_guard_boost.cpp  currency_guard_choice_folly.cpp  currency_guard_cpp17.cpp  currency_guard_folly.cpp  currency_guard_or_else_folly.cpp  executor.h  extensions.cpp  extensions.h  fixture.h  folly_fixture.h  follyexecutor.h  future.h  future_impl.h  inline_executor.h  invalid_boost.cpp  invalid_folly.cpp  or_else.h  performance_combinators.cpp  performance_shared.cpp  promise.h  (+18 more)
src/advanced/: CMakeLists.txt  advanced_futures_boost.h  advanced_futures_folly.h  future.cpp  future.h  future_boost.h  future_boost_impl.h  future_folly.h  future_folly_impl.h  promise.h  promise_boost.h  promise_folly.h  shared_future.cpp  shared_future.h  shared_future_folly.h
src/advanced/boost/: CMakeLists.txt  future.h  future_impl.h  promise.h
src/advanced/boost/test/: CMakeLists.txt  copy_exception.cpp  future.cpp
src/advanced/folly/: CMakeLists.txt  future.h  future_impl.h  promise.h  shared_future.h
src/advanced/folly/test/: CMakeLists.txt  future.cpp  shared_future.cpp
src/boost/: CMakeLists.txt  future.h  future_impl.h  promise.h  util.h
src/boost/test/: CMakeLists.txt  copy_exception.cpp  future.cpp
src/callbacks/: CMakeLists.txt  multiple_callbacks_boost.cpp
src/cpp_user_group_karlsruhe/: CMakeLists.txt  broken_promise_cpp17.cpp  holiday_booking.h  holiday_booking_advanced.cpp  holiday_booking_boost.cpp  holiday_booking_cpp17.cpp  holiday_booking_folly.cpp  try_complete_with_advanced.cpp  try_complete_with_boost.cpp
src/currency/: CMakeLists.txt  currency_boost.cpp  currency_cpp17.cpp  currency_cpp17_sequential.cpp  currency_folly.cpp  currency_guard_boost.cpp  currency_guard_choice_folly.cpp  currency_guard_folly.cpp
src/folly/: future.h  future_impl.h  promise.h  shared_future.h  shared_future_impl.h  util.h
src/folly/test/: CMakeLists.txt  future.cpp  shared_future.cpp
src/holiday_booking/: CMakeLists.txt  holiday_booking.h  holiday_booking_advanced.cpp  holiday_booking_boost.cpp  holiday_booking_folly.cpp  try_complete_with_folly.cpp
src/lock/: CMakeLists.txt  core.h  state.h
src/lock/test/: CMakeLists.txt  future.cpp
src/mvar/: CMakeLists.txt  core.h  mvar.h
src/mvar/test/: CMakeLists.txt  future.cpp  mvar.cpp
src/performance/: CMakeLists.txt  performance_combinators.cpp  performance_shared.cpp  tree.h
src/santa/: CMakeLists.txt  santa_advanced.cpp  santa_boost.cpp  santa_folly.cpp
src/wrapper/: CMakeLists.txt  future.cpp  future.h  future_folly.h  promise.h  promise_folly.h  shared_future.cpp  shared_future.h  shared_future_folly.h
