add_executable(advanced_boost_future future.cpp)
add_dependencies(advanced_boost_future boost folly)
target_link_libraries(advanced_boost_future ${Boost_LIBRARIES} ${folly_LIBRARIES})
add_test(AdvancedBoostFuture advanced_boost_future)

add_executable(advanced_boost_copy_exception copy_exception.cpp)
add_dependencies(advanced_boost_copy_exception boost)
target_link_libraries(advanced_boost_copy_exception ${Boost_LIBRARIES})
add_test(AdvancedBoostCopyException advanced_boost_copy_exception)