add_executable(advanced_folly_future future.cpp)
add_dependencies(advanced_folly_future folly)
target_link_libraries(advanced_folly_future ${Boost_LIBRARIES} ${folly_LIBRARIES})
add_test(AdvancedFollyFuture advanced_folly_future)

add_executable(advanced_folly_shared_future shared_future.cpp)
add_dependencies(advanced_folly_shared_future folly)
target_link_libraries(advanced_folly_shared_future ${Boost_LIBRARIES} ${folly_LIBRARIES} pthread)
add_test(AdvancedFollySharedFuture advanced_folly_shared_future)